# SignVisionAI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt  seed.py  test.py
SignVisionSite/: asgi.py  settings.py  urls.py  wsgi.py
config/gunicorn/: dev.py
signvision_ai/: dataset.py
signvision_ai/analyzers/: google_dataset_analysis.py  interactive.py  preview.py  video_analysis.py
signvision_ai/classifiers/: gesture_classifier.py
signvision_ai/models/: gesture_model.py
signvision_ai/scrapers/: asl.py
signvision_core/: api.py  apps.py  models.py  serializers.py  urls.py  views.py
signvision_core/migrations/: 0001_initial.py  0002_country_sign_languages_gesture_hands_and_more.py  0003_alter_signlanguage_abbreviation_and_more.py  0004_alter_gesture_hands.py  0005_gestureentry.py  0006_gestureentry_frame_count.py  0007_alter_gestureentry_table.py  0008_gestureentry_mouth_gestureentry_entry_type.py  0009_rename_index_base_gestureentry_left_index_base_and_more.py  0010_gestureentry_right_index_base_and_more.py  0011_alter_gestureentry_gesture.py
