[tool.poetry]
name = "signvisionai"
version = "0.1.0"
description = ""
authors = ["ArthurVanRemoortel <arthurvanremoortel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "^4.2.4"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.7"
gunicorn = "^21.2.0"
djangorestframework = "^3.14.0"
markdown = "^3.4.4"
django-filter = "^23.2"
mediapipe = "^0.10.3"
opencv-python = "^4.8.0.76"
tqdm = "^4.66.1"
notebook = "^7.0.2"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
seaborn = "^0.12.2"
fastparquet = "^2023.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
